kubernetes/apps/llama-cpp/overlays/workload-prd/svc-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: llama-cpp
  namespace: llm
spec:
  type: LoadBalancer
